tests/core/error/expression-logical-4.rq
SELECT (true && 'a' AS ?op) { }
